<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorPrimary"
                                             tools:context=".activity.LoginActivity">
    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/please_login_first"
            android:textColor="@color/textcolor" android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loginPanel" app:layout_constraintVertical_bias="0.517"/>
    <LinearLayout
            android:id="@+id/loginPanel"
            android:layout_width="327dp"
            android:layout_height="348dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8sp"
            android:layout_marginLeft="8sp"
            android:layout_marginRight="8sp"

            android:layout_marginTop="8sp"
            android:background="@drawable/background_login_div"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.417">

        <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:layout_marginTop="15sp"
                android:ems="10"
                android:hint="@string/请输入您的用户名"
                android:inputType="none"
                android:maxLines="1"
                android:selectAllOnFocus="false"
                android:textSize="17sp"
                android:singleLine="true"
        >

            <requestFocus/>
        </EditText>

        <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:layout_marginTop="15sp"
                android:ems="10"
                android:hint="@string/请输入您的密码"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="17sp"
                android:singleLine="true">

            <requestFocus/>
        </EditText>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:layout_weight="0.25"
                android:orientation="vertical"
                android:weightSum="1"
                tools:ignore="InefficientWeight">

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                <CheckBox
                        android:id="@+id/checkbox_remember_password"
                        android:layout_width="100sp"
                        android:layout_height="40sp"
                        android:text="@string/记住密码"/>

                <CheckBox
                        android:id="@+id/checkbox_auto_login"
                        android:layout_width="100sp"
                        android:layout_height="40sp"
                        android:text="@string/自动登录"/>
            </RadioGroup>

            <Spinner
                    android:id="@+id/spinner_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.39"
                    android:autofillHints="sd"
                    tools:ignore="InefficientWeight,NestedWeights"
                    tools:targetApi="o"/>

        </LinearLayout>

        <Button
                android:id="@+id/button_login"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20sp"
                android:background="@drawable/background_button_div"
                android:text="@string/登录"
                android:textColor="@color/white"
                android:textSize="20sp"/>

    </LinearLayout>
    <Button
            android:id="@+id/button_register"
            android:background="#00000000"
            android:layout_width="117dp"
            android:layout_height="25dp"
            android:layout_marginBottom="33dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/textcolor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:text="@string/新用户注册点我"/>
    <Button
            android:id="@+id/button_forget_password"
            android:background="#00000000"
            android:layout_width="77sp"
            android:layout_height="25dp"
            android:layout_marginBottom="33dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/textcolor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.893"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:text="@string/忘记密码"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="vertical"/>

</android.support.constraint.ConstraintLayout>
